--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dot-template-types": "^0.3.0",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2",
-    "vuepress": "2.0.0-beta.46",
-    "vuepress-theme-reco": "2.0.0-beta.8"
+    "vuepress": "^2.0.0-beta.46",
+    "vuepress-theme-reco": "^2.0.0-beta.8"
   }
 }
