--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 yarn-error.log
 node_modules
-docs/.vuepress/.cache
-docs/.vuepress/.temp
-docs/.vuepress/dist
+blogs/.vuepress/.cache
+blogs/.vuepress/.temp
+blogs/.vuepress/dist
