--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "author": "StoneHui <464206200@qq.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "dev": "vuepress dev blogs",
+    "build": "vuepress build blogs"
   },
   "dependencies": {},
   "devDependencies": {
     "dot-template-types": "^0.3.0",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2",
-    "vuepress": "^2.0.0-beta.46",
-    "vuepress-theme-reco": "^2.0.0-beta.8"
+    "vuepress": "2.0.0-beta.51",
+    "vuepress-theme-reco": "2.0.0-beta.41"
   }
 }
